crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_code_blocks_executable.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..397
  HEADING@0..25
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..24
      TEXT@2..24 "Executable Code Chunks"
    NEWLINE@24..25 "\n"
  BLANK_LINE@25..26
    BLANK_LINE@25..26 "\n"
  PARAGRAPH@26..41
    TEXT@26..40 "Basic R chunk:"
    NEWLINE@40..41 "\n"
  BLANK_LINE@41..42
    BLANK_LINE@41..42 "\n"
  CODE_BLOCK@42..61
    CODE_FENCE_OPEN@42..49
      CODE_FENCE_MARKER@42..45 "```"
      CODE_INFO@45..48
        TEXT@45..46 "{"
        CODE_LANGUAGE@46..47 "r"
        CHUNK_OPTIONS@47..48
          TEXT@47..48 "}"
      NEWLINE@48..49 "\n"
    CODE_CONTENT@49..57
      TEXT@49..56 "x <- 42"
      NEWLINE@56..57 "\n"
    CODE_FENCE_CLOSE@57..61
      CODE_FENCE_MARKER@57..60 "```"
      NEWLINE@60..61 "\n"
  BLANK_LINE@61..62
    BLANK_LINE@61..62 "\n"
  PARAGRAPH@62..76
    TEXT@62..75 "With options:"
    NEWLINE@75..76 "\n"
  BLANK_LINE@76..77
    BLANK_LINE@76..77 "\n"
  CODE_BLOCK@77..130
    CODE_FENCE_OPEN@77..84
      CODE_FENCE_MARKER@77..80 "```"
      CODE_INFO@80..83
        TEXT@80..81 "{"
        CODE_LANGUAGE@81..82 "r"
        CHUNK_OPTIONS@82..83
          TEXT@82..83 "}"
      NEWLINE@83..84 "\n"
    CODE_CONTENT@84..126
      HASHPIPE_YAML_PREAMBLE@84..115
        HASHPIPE_YAML_CONTENT@84..115
          YAML_LINE_PREFIX@84..87 "#| "
          YAML_DOCUMENT@87..115
            YAML_BLOCK_MAP@87..115
              YAML_BLOCK_MAP_ENTRY@87..102
                YAML_BLOCK_MAP_KEY@87..92
                  YAML_SCALAR@87..91
                    YAML_SCALAR_TEXT@87..91 "echo"
                  YAML_COLON@91..92 ":"
                YAML_BLOCK_MAP_VALUE@92..102
                  WHITESPACE@92..93 " "
                  YAML_SCALAR@93..98
                    YAML_SCALAR_TEXT@93..98 "false"
                  NEWLINE@98..99 "\n"
                  YAML_LINE_PREFIX@99..102 "#| "
              YAML_BLOCK_MAP_ENTRY@102..115
                YAML_BLOCK_MAP_KEY@102..112
                  YAML_SCALAR@102..111
                    YAML_SCALAR_TEXT@102..111 "fig-width"
                  YAML_COLON@111..112 ":"
                YAML_BLOCK_MAP_VALUE@112..115
                  WHITESPACE@112..113 " "
                  YAML_SCALAR@113..114
                    YAML_SCALAR_TEXT@113..114 "8"
                  NEWLINE@114..115 "\n"
      TEXT@115..125 "plot(1:10)"
      NEWLINE@125..126 "\n"
    CODE_FENCE_CLOSE@126..130
      CODE_FENCE_MARKER@126..129 "```"
      NEWLINE@129..130 "\n"
  BLANK_LINE@130..131
    BLANK_LINE@130..131 "\n"
  PARAGRAPH@131..145
    TEXT@131..144 "Python chunk:"
    NEWLINE@144..145 "\n"
  BLANK_LINE@145..146
    BLANK_LINE@145..146 "\n"
  CODE_BLOCK@146..196
    CODE_FENCE_OPEN@146..158
      CODE_FENCE_MARKER@146..149 "```"
      CODE_INFO@149..157
        TEXT@149..150 "{"
        CODE_LANGUAGE@150..156 "python"
        CHUNK_OPTIONS@156..157
          TEXT@156..157 "}"
      NEWLINE@157..158 "\n"
    CODE_CONTENT@158..192
      HASHPIPE_YAML_PREAMBLE@158..172
        HASHPIPE_YAML_CONTENT@158..172
          YAML_LINE_PREFIX@158..161 "#| "
          YAML_DOCUMENT@161..172
            YAML_BLOCK_MAP@161..172
              YAML_BLOCK_MAP_ENTRY@161..172
                YAML_BLOCK_MAP_KEY@161..166
                  YAML_SCALAR@161..165
                    YAML_SCALAR_TEXT@161..165 "eval"
                  YAML_COLON@165..166 ":"
                YAML_BLOCK_MAP_VALUE@166..172
                  WHITESPACE@166..167 " "
                  YAML_SCALAR@167..171
                    YAML_SCALAR_TEXT@167..171 "true"
                  NEWLINE@171..172 "\n"
      TEXT@172..191 "import pandas as pd"
      NEWLINE@191..192 "\n"
    CODE_FENCE_CLOSE@192..196
      CODE_FENCE_MARKER@192..195 "```"
      NEWLINE@195..196 "\n"
  BLANK_LINE@196..197
    BLANK_LINE@196..197 "\n"
  PARAGRAPH@197..221
    TEXT@197..220 "Julia chunk with label:"
    NEWLINE@220..221 "\n"
  BLANK_LINE@221..222
    BLANK_LINE@221..222 "\n"
  CODE_BLOCK@222..283
    CODE_FENCE_OPEN@222..233
      CODE_FENCE_MARKER@222..225 "```"
      CODE_INFO@225..232
        TEXT@225..226 "{"
        CODE_LANGUAGE@226..231 "julia"
        CHUNK_OPTIONS@231..232
          TEXT@231..232 "}"
      NEWLINE@232..233 "\n"
    CODE_CONTENT@233..279
      HASHPIPE_YAML_PREAMBLE@233..267
        HASHPIPE_YAML_CONTENT@233..267
          YAML_LINE_PREFIX@233..236 "#| "
          YAML_DOCUMENT@236..267
            YAML_BLOCK_MAP@236..267
              YAML_BLOCK_MAP_ENTRY@236..255
                YAML_BLOCK_MAP_KEY@236..242
                  YAML_SCALAR@236..241
                    YAML_SCALAR_TEXT@236..241 "label"
                  YAML_COLON@241..242 ":"
                YAML_BLOCK_MAP_VALUE@242..255
                  WHITESPACE@242..243 " "
                  YAML_SCALAR@243..251
                    YAML_SCALAR_TEXT@243..251 "fig-plot"
                  NEWLINE@251..252 "\n"
                  YAML_LINE_PREFIX@252..255 "#| "
              YAML_BLOCK_MAP_ENTRY@255..267
                YAML_BLOCK_MAP_KEY@255..260
                  YAML_SCALAR@255..259
                    YAML_SCALAR_TEXT@255..259 "echo"
                  YAML_COLON@259..260 ":"
                YAML_BLOCK_MAP_VALUE@260..267
                  WHITESPACE@260..261 " "
                  YAML_SCALAR@261..266
                    YAML_SCALAR_TEXT@261..266 "false"
                  NEWLINE@266..267 "\n"
      TEXT@267..278 "using Plots"
      NEWLINE@278..279 "\n"
    CODE_FENCE_CLOSE@279..283
      CODE_FENCE_MARKER@279..282 "```"
      NEWLINE@282..283 "\n"
  BLANK_LINE@283..284
    BLANK_LINE@283..284 "\n"
  CODE_BLOCK@284..397
    CODE_FENCE_OPEN@284..291
      CODE_FENCE_MARKER@284..287 "```"
      CODE_INFO@287..290
        TEXT@287..288 "{"
        CODE_LANGUAGE@288..289 "r"
        CHUNK_OPTIONS@289..290
          TEXT@289..290 "}"
      NEWLINE@290..291 "\n"
    CODE_CONTENT@291..393
      HASHPIPE_YAML_PREAMBLE@291..386
        HASHPIPE_YAML_CONTENT@291..386
          YAML_LINE_PREFIX@291..294 "#| "
          YAML_DOCUMENT@294..386
            YAML_BLOCK_MAP@294..386
              YAML_BLOCK_MAP_ENTRY@294..386
                YAML_BLOCK_MAP_KEY@294..302
                  YAML_SCALAR@294..301
                    YAML_SCALAR_TEXT@294..301 "fig-cap"
                  YAML_COLON@301..302 ":"
                YAML_BLOCK_MAP_VALUE@302..386
                  WHITESPACE@302..303 " "
                  YAML_SCALAR@303..385
                    YAML_SCALAR_TEXT@303..323 "\"A multiline caption"
                    NEWLINE@323..324 "\n"
                    YAML_LINE_PREFIX@324..327 "#| "
                    YAML_SCALAR_TEXT@327..370 " that spans multiple  ..."
                    NEWLINE@370..371 "\n"
                    YAML_LINE_PREFIX@371..374 "#| "
                    YAML_SCALAR_TEXT@374..385 " wrapping.\""
                  NEWLINE@385..386 "\n"
      TEXT@386..392 "a <- 1"
      NEWLINE@392..393 "\n"
    CODE_FENCE_CLOSE@393..397
      CODE_FENCE_MARKER@393..396 "```"
      NEWLINE@396..397 "\n"
