crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_code_fence_brace_info_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..53
  PARAGRAPH@0..25
    INLINE_CODE@0..24
      INLINE_CODE_MARKER@0..3 "```"
      INLINE_CODE_CONTENT@3..21 "{code-cell}\nx = 1\n"
      INLINE_CODE_MARKER@21..24 "```"
    NEWLINE@24..25 "\n"
  BLANK_LINE@25..26
    BLANK_LINE@25..26 "\n"
  HEADING@26..37
    ATX_HEADING_MARKER@26..28
      ATX_HEADING_MARKER@26..28 "##"
    WHITESPACE@28..29 " "
    HEADING_CONTENT@29..36
      TEXT@29..36 "Section"
    NEWLINE@36..37 "\n"
  BLANK_LINE@37..38
    BLANK_LINE@37..38 "\n"
  HEADING@38..53
    ATX_HEADING_MARKER@38..41
      ATX_HEADING_MARKER@38..41 "###"
    WHITESPACE@41..42 " "
    HEADING_CONTENT@42..52
      TEXT@42..52 "Subsection"
    NEWLINE@52..53 "\n"
