crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_code_fence_multiword_info_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..63
  PARAGRAPH@0..28
    INLINE_CODE@0..27
      INLINE_CODE_MARKER@0..3 "```"
      INLINE_CODE_CONTENT@3..24 "@example foo\na = 1+1\n"
      INLINE_CODE_MARKER@24..27 "```"
    NEWLINE@27..28 "\n"
  BLANK_LINE@28..29
    BLANK_LINE@28..29 "\n"
  PARAGRAPH@29..43
    TEXT@29..42 "A real block:"
    NEWLINE@42..43 "\n"
  BLANK_LINE@43..44
    BLANK_LINE@43..44 "\n"
  CODE_BLOCK@44..63
    CODE_FENCE_OPEN@44..53
      CODE_FENCE_MARKER@44..47 "```"
      CODE_INFO@47..52
        CODE_LANGUAGE@47..52 "julia"
      NEWLINE@52..53 "\n"
    CODE_CONTENT@53..59
      TEXT@53..58 "b = 2"
      NEWLINE@58..59 "\n"
    CODE_FENCE_CLOSE@59..63
      CODE_FENCE_MARKER@59..62 "```"
      NEWLINE@62..63 "\n"
