crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_code_spans_unmatched_backtick_run_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..9
  PARAGRAPH@0..9
    TEXT@0..8 "```foo``"
    NEWLINE@8..9 "\n"
