crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_code_spans_unmatched_backtick_run_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..9
  PARAGRAPH@0..9
    TEXT@0..1 "`"
    INLINE_CODE@1..8
      INLINE_CODE_MARKER@1..3 "``"
      INLINE_CODE_CONTENT@3..6 "foo"
      INLINE_CODE_MARKER@6..8 "``"
    NEWLINE@8..9 "\n"
